--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>New Kitchen Gun!</h1><br>
 
-<video width="720" height="360" controls>
+<video width="720" height="360" controls autoplay>
    <source src="THIS SINK IS FILTHY.mp4" type="video/mp4">
 </video>
 
