--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>New Kitchen Gun!</h1><br>
 
-<video width="720" height="360" controls autoplay>
+<video width="720" height="360" controls>
    <source src="THIS SINK IS FILTHY.mp4" type="video/mp4">
 </video>
 
@@ -16,7 +16,7 @@ Say goodbye to daily stains and dirty surfaces with new Kitchen Gun!
 This sink is filthy! But just three shots from Kitchen Gun,
 BANG BANG BANG
 And it sparkles like neeew
-*Girl begins to cry*
+<i>*Girl begins to cry*</i>
 YEAH all clean again!
 </pre>
 
