--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Kitchen Gun</title>
-<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<h1>New Kitchen Gun!</h1><br>
-
-<video width="720" height="360" controls>
-   <source src="THIS SINK IS FILTHY.mp4" type="video/mp4">
-</video>
-
-<pre>
+   <head>
+      <title>Kitchen Gun</title>
+      <link rel="stylesheet" href="styles.css">
+   </head>
+   <body>
+      <h1>New Kitchen Gun!</h1>
+      <br>
+      <video width="720" height="360" controls>
+         <source src="THIS SINK IS FILTHY.mp4" type="video/mp4">
+      </video>
+      <pre>
 Say goodbye to daily stains and dirty surfaces with new Kitchen Gun!
 This sink is filthy! But just three shots from Kitchen Gun,
 BANG BANG BANG
@@ -19,6 +18,5 @@ And it sparkles like neeew
 <i>*Girl begins to cry*</i>
 YEAH all clean again!
 </pre>
-
-</body>
+   </body>
 </html>
