--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>New Kitchen Gun!</h1>
       <br>
       <video width="720" height="360" controls>
-         <source src="THIS SINK IS FILTHY.mp4" type="video/mp4">
+         <source src="kitchen_gun.mp4" type="video/mp4">
       </video>
       <pre>
 Say goodbye to daily stains and dirty surfaces with new Kitchen Gun!
