--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>Kitchen Gun</title>
       <link rel="stylesheet" href="styles.css">
+      <link rel="icon" href="favicon.ico">
    </head>
    <body>
       <h1>New Kitchen Gun!</h1>
